--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "pkg-name",
+  "name": "vite-plugin-unocss-watcher",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "packageManager": "pnpm@8.9.2",
-  "description": "",
+  "description": "A Vite plugin to reload UnoCSS config when files changed",
   "author": "ocavue <ocavue@gmail.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/ocavue",
-  "homepage": "https://github.com/ocavue/pkg-name#readme",
+  "homepage": "https://github.com/ocavue/vite-plugin-unocss-watcher#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ocavue/pkg-name.git"
+    "url": "https://github.com/ocavue/vite-plugin-unocss-watcher.git"
   },
-  "bugs": "https://github.com/ocavue/pkg-name/issues",
+  "bugs": "https://github.com/ocavue/vite-plugin-unocss-watcher/issues",
   "keywords": [],
   "sideEffects": false,
   "main": "./dist/index.cjs",
@@ -43,20 +43,19 @@
     "fix": "eslint --fix . && prettier --write .",
     "prepublishOnly": "nr build",
     "start": "esno src/index.ts",
-    "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.8",
     "@ocavue/eslint-config": "^1.3.1",
     "@types/node": "^18.18.6",
+    "@unocss/core": "^0.57.1",
     "eslint": "^8.52.0",
     "esno": "^0.17.0",
     "prettier": "^3.0.3",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
+    "vite": "^4.5.0"
   },
   "renovate": {
     "extends": [
